--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -28,12 +28,12 @@
         <p><em>Manipal University, Manipal, Karnataka, India </em></p>
         <!-- <p>I have completed my 4 year graduation degree in aeronatucal engineering with overall CGPA 6.7/10 </p> -->
       </div>
-      <div class="resume-item">
+      <!-- <div class="resume-item">
         <h4>Senior Education (12th) </h4>
         <h5>2011 - 2013</h5>
         <p><em>Narayana Junior College, Hyderabad, India </em></p>
-        <!-- <p>I have completed my 12th from CBSE board with overall 9.3/10 </p> -->
-      </div>
+        <p>I have completed my 12th from CBSE board with overall 9.3/10 </p>
+      </div> -->
 
 
       </div>
@@ -65,7 +65,7 @@
       </div>
        <div class="resume-item">
         <h4>Web Developer, KATE Technologies</h4>
-        <h5>June'2016 - Nov' 2017</h5>
+        <h5>June'2015 - Dec'2017</h5>
         <p><em>Hyderabad, India </em></p>
         <p>
         <ul>
