--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -114,7 +114,7 @@
       <div class="col-lg-6">
 
         <div class="progress">
-          <span class="skill">JavaScript <i class="val">85%</i></span>
+          <span class="skill">TypeScript <i class="val">85%</i></span>
           <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"  style="width:85%"></div>
           </div>
@@ -128,7 +128,7 @@
         </div>
 
         <div class="progress">
-          <span class="skill">Java <i class="val">95%</i></span>
+          <span class="skill">JavaScrpt <i class="val">95%</i></span>
           <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"  style="width:95%"></div>
           </div>
