--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,7 +10,7 @@
       <div class="icon-box">
         <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
         <h4><a href="https://drive.google.com/file/d/1lnNWvR_4ImJ4mc0Mbtwu3Dje3B4umULl/view?usp=sharing" target="_blank">Weather App</a></h4>
-        <p>Completed 2 months internship on Bussiness Develpment and Brand Marketing from Nearbuy Ltd.</p>
+        <p>Yet another weather app with Angular 9. With this application, you can look up the weather around the world by city name. It is a simple and minimalistic app built to get my self started with a Angular framework.</p>
       </div>
     </div>
 
@@ -18,7 +18,7 @@
       <div class="icon-box">
           <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
         <h4><a href="https://drive.google.com/file/d/1S8LjG_x2-L5XSvL2dDwT0XqOyEKkNuSP/view?usp=sharing" target="_blank">News App</a></h4>
-        <p>Certified Virtual Internship from IIM Lucknow.</p>
+        <p>This is a front end application built with React JS using Newsapi.org developer api. I have integrated the filter module to search betweeen different categories and sources (CNN, BBC NEws, ESPN, The Hindu, etc..,).</p>
       </div>
     </div>
 
@@ -27,7 +27,7 @@
         <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
         <h4><a href="https://drive.google.com/file/d/1Sx5vB1y7o02kiNNLemEikqZcTxs1H-83/view?usp=sharing" target="_blank">Portfolio2
         </a></h4>
-        <p>Certified Online course offered on Digital Marketing. </p>
+        <p>Designed and developed using Figma and React. Even though it is a static site, building this portfolio with react makes it more flexible, simple, and organised. </p>
       </div>
     </div>
 
