--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -21,8 +21,8 @@
         <h3>Social Profiles</h3>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/kartheek-g-36197186/" target="_blank" class="fa fa-linkedin"></a>
+          <a href="https://github.com/kartheekl68" target="_blank" class="fa fa-github"></a>
           <a href="mailto:kartheekl68@gmail.com" target="_blank" class="fa fa-google-plus"></a>
-          <a href="https://www.facebook.com/kar.theek.98/" target="_blank" class="fa fa-facebook"></a>
           <a href="https://www.instagram.com/kar_thinks/" target="_blank" class="fa fa-instagram"></a>
           <a href=" https://twitter.com/kartheekl68" target="_blank" class="fa fa-twitter"></a>
         </div>
