--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-# Certificates
+# Projects
 --------------------------------------------------------------*/
 .icon-box {
   text-align: center;
