--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -34,6 +34,29 @@
         <p><em>Narayana Junior College, Hyderabad, India </em></p>
         <p>I have completed my 12th from CBSE board with overall 9.3/10 </p>
       </div> -->
+      <h3 class="resume-title">Certifications</h3>
+
+      <div class="resume-item">
+        <h4>Angular-The complete guide </h4>
+        <h5>2019 - 2020</h5>
+        <p><em>Certified Online Course, Udemy</em></p>
+      </div>
+
+      <div class="resume-item">
+        <h4>MERN Stack Front To Back: Full Stack React, Redux & Node.js</h4>
+        <h5>2019 - 2020</h5>
+        <p><em>Certified Online Course, Udemy</em></p>
+      </div>
+
+      <div class="resume-item">
+        <h4>Extra Curriculars</h4>
+        <ul>
+          <li>Merit Scholarship from Lamar University.</li>
+          <li>President of Upsilon Pi Epsilon (International Honor Society for Computing Disciplines) at Lamar University.</li>
+          <li>Graduate Teaching Assistant & Web Master, Department of Computer Science.</li>
+          <li>Organized and Volunteered for the events conducted by Lamar Baptist Church.</li>
+        </ul>
+      </div>
 
 
       </div>
@@ -48,6 +71,7 @@
           <li>Involved in developing enterprise application using Angular 8/9, RXJS, and NGRX platform</li>
           <li>Implemented reusable components such as Color Picker, Dropdown Menu, Date Time Picker, Flyout Popup, Tooltip and skeleton loader, etc.</li>
           <li>Worked on Translations Services and created POCs for Charts, Skeleton loaders, Kanban Board, and Importing libraries via CDN.</li>
+        <li>Implemented TDD and Used Jest framework for unit testing. Used Cypress and Test-Cafe for an end to end testing.</li>
         </ul>
 
       </div>
@@ -71,7 +95,7 @@
         <ul>
           <li>Worked on their internal dashboard application to keep track of their customers accounts. </li>
           <li>Designed layouts, build wizards, and developed various dynamic web pages.</li>
-          <li>	Developed cross-browser compatible website using HTML, CSS, and JavaScript. </li>
+          <li>Developed cross-browser compatible website using HTML, CSS, and JavaScript. </li>
 
         </ul>
 
