--- a/src/styles.css
+++ b/src/styles.css
@@ -159,7 +159,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a {
   display: block;
   position: relative;
-  color: rgba(232, 3, 104, 0.8);
+  color: rgba(255, 255, 255, 0.8);
   font-size: 16px;
   font-family: "Poppins", sans-serif;
   font-weight: 800;
@@ -184,7 +184,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color:#fff;
+  color:#e80368;
   text-decoration: none;
 }
 
