testing screen resolution

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,9 @@
       <header id="header" class="header-tops header-top">
         <div class="container">
 
-          <h1>Kartheek G</h1>
-          <nav class="nav-menu d-none d-lg-block">
+          <h1 class=" d-none d-lg-block">Kartheek G</h1>
+
+          <nav class="nav-menu d-sm-block">
             <ul>
               <li><a routerLink="/home">Home</a></li>
               <li><a routerLink="/about">About</a></li>
