--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
     <h2>I'm a passionate <span>Front-End Developer</span> </h2>
 
-    <nav class="nav-menu d-none d-lg-block">
+    <nav class="nav-menu  d-sm-block">
       <ul>
         <li class="active"><a routerLink="/home">Home</a></li>
         <li><a routerLink="/about">About</a></li>
@@ -14,7 +14,7 @@
         <li><a routerLink="/projects">Projects</a></li>
         <li><a routerLink="/contact">Contact</a></li>
    </ul>
-    </nav><!-- .nav-menu -->
+    </nav>
 
     <div class="social-links">
 
