--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,12 @@
 
           <h1 class=" d-none d-lg-block">Kartheek G</h1>
 
-          <nav class="nav-menu d-none d-xl-block d-lg-block d-sm-block d-xs-block">
+          <nav class="nav-menu d-block">
             <ul>
               <li><a routerLink="/home">Home</a></li>
               <li><a routerLink="/about">About</a></li>
               <li><a routerLink="/resume">Resume</a></li>
-              <li><a routerLink="/projects">Projects</a></li>
+              <!-- <li><a routerLink="/projects">Projects</a></li> -->
               <li><a routerLink="/contact">Contact</a></li>
          </ul>
           </nav><!-- .nav-menu -->
