--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,12 +6,12 @@
     <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
     <h2>I'm a passionate <span>Front-End Developer</span> </h2>
 
-    <nav class="nav-menu  d-none d-xl-block d-lg-block d-sm-block d-xs-block">
+    <nav class="nav-menu  d-block">
       <ul>
         <li class="active"><a routerLink="/home">Home</a></li>
         <li><a routerLink="/about">About</a></li>
         <li><a routerLink="/resume">Resume</a></li>
-        <li><a routerLink="/projects">Projects</a></li>
+        <!-- <li><a routerLink="/projects">Projects</a></li> -->
         <li><a routerLink="/contact">Contact</a></li>
    </ul>
     </nav>
